tdf#128010: Don't ask to enable JRE when populating available scripts

It was user's intention to not use JRE, so omitting the JRE-dependent
scripts in dialogs is just consistent with user's configuration.

Change-Id: Ic551f5dd1d797fbaa2dc6d7e443e23d46b0ac5d3
Reviewed-on: https://gerrit.libreoffice.org/82353
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit ebccc375248faebdfbca273b149483593c753387)