cui/source/customize/CommandCategoryListBox.cxx
@@ -43,6 +43,7 @@
 #include <bitmaps.hlst>
 #include <comphelper/processfactory.hxx>
 #include <comphelper/sequenceashashmap.hxx>
+#include <comphelper/DisableInteractionHelper.hxx>
 #include <comphelper/string.hxx>
 #include <i18nlangtag/languagetag.hxx>
 #include <i18nutil/searchopt.hxx>
@@ -382,8 +383,15 @@ void CommandCategoryListBox::categorySelected(CuiConfigFunctionListBox* pFunctio
                                 SfxCfgKind::GROUP_SCRIPTCONTAINER, 0 ) );
                         std::unique_ptr<weld::TreeIter> xMacroGroup(pFunctionListBox->tree_append(OUString::number(reinterpret_cast<sal_Int64>(m_aGroupInfo.back().get())), sUIName));
 
-                        //Add the children and the grand children
-                        addChildren(xMacroGroup.get(), childGroup, pFunctionListBox, filterTerm, pCurrentSaveInData, aNodesToExpand);
+                        {
+                            // tdf#128010: Do not nag user asking to enable JRE: if it's disabled,
+                            // simply don't show relevant entries (user chose to not use JRE)
+                            css::uno::ContextLayer layer(
+                                new comphelper::NoEnableJavaInteractionContext(css::uno::getCurrentContext()));
+                            //Add the children and the grand children
+                            addChildren(xMacroGroup.get(), childGroup, pFunctionListBox, filterTerm,
+                                        pCurrentSaveInData, aNodesToExpand);
+                        }
 
                         // Remove the main group if empty
                         if (!pFunctionListBox->iter_has_child(*xMacroGroup))
